--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <a href="#name">お問い合わせ</a>
 </div>
 <div>
-    <img src="AmaPhotos/登山3.jpeg" alt="">
-    <img src="AmaPhotos/登山2.jpeg" alt="">
+    <img src="登山3.jpeg" alt="">
+    <img src="登山2.jpeg" alt="">
     <img src="AmaPhotos/登山1.jpeg" alt="">
     <img src="AmaPhotos/山頂2.jpeg" alt="">
     <img src="AmaPhotos/山頂.jpeg" alt="">
