--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
 <div>
     <img src="登山3.jpeg" alt="">
     <img src="登山2.jpeg" alt="">
-    <img src="AmaPhotos/登山1.jpeg" alt="">
-    <img src="AmaPhotos/山頂2.jpeg" alt="">
-    <img src="AmaPhotos/山頂.jpeg" alt="">
-    <img src="AmaPhotos/みずうみ.jpeg" alt="">
-    <img src="AmaPhotos/沈没.jpeg" alt="">
-    <img src="AmaPhotos/魚正面.jpeg" alt="">
-    <img src="AmaPhotos/ｘｍ.jpeg" alt="">
-    <img src="AmaPhotos/サンゴ.jpeg" alt="">
-    <img src="AmaPhotos/カサゴ.jpeg" alt="">
-    <img src="AmaPhotos/クマノミ.jpeg" alt="">
-    <img src="AmaPhotos/バイク1.jpeg" alt="">
-    <img src="AmaPhotos/バイク2.jpeg" alt="">
+    <img src="登山1.jpeg" alt="">
+    <img src="山頂2.jpeg" alt="">
+    <img src="山頂.jpeg" alt="">
+    <img src="みずうみ.jpeg" alt="">
+    <img src="沈没.jpeg" alt="">
+    <img src="魚正面.jpeg" alt="">
+    <img src="ｘｍ.jpeg" alt="">
+    <img src="サンゴ.jpeg" alt="">
+    <img src="カサゴ.jpeg" alt="">
+    <img src="クマノミ.jpeg" alt="">
+    <img src="バイク1.jpeg" alt="">
+    <img src="バイク2.jpeg" alt="">
 </div>
 <footer>
     <H2>お気軽にお問い合わせください</H2>
