--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 <footer>
     <H2>お気軽にお問い合わせください</H2>
-    <p>call_amazon@yahoo.co.jp</p>
+    <a href="mailto:call_amazon@yahoo.co.jp">call_amazon@yahoo.co.jp</a>
     <a id="name"></a>
 </footer>
      </body>
