--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
         <H1>自己紹介</H1>
-            <P>ご回覧いただきありごとうございます<br>
+            <P>ご覧いただきありごとうございます<br>
                このサイトでは趣味の写真を掲載しています</p>
             <img src="" alt="">
         </header>
